oxiplate-derive/tests/broken/numbers/bad-hex.stderr
error: Expected an expression.
 --> tests/broken/numbers/bad-hex.rs:4:23
  |
4 | #[oxiplate_inline("{{ 0x }}")]
  |                       ^^^^^
